<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eratosthenes Prime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="intro">This is an app that quickly generates a list of prime numbers up to a
            limit of your choice, using an algorithm called Sieve of Eratosthenes.</string>
    <string name="input_prompt">Enter your upper limit (inclusive): </string>
    <string name="or">OR</string>
    <string name="input_hint">Enter number here</string>
    <string name="go">GO!</string>
    <string name="generate_random">Pick a Number For Me</string>
    <string name="title_activity_display_prime_list">Results</string>
    <string name="prime_list_header">Prime numbers less than or equal to: </string>

    <!--String resources for the over limit alert dialog-->
    <string name="over_alert_title">Let\'s try to stay in range</string>
    <string name="over_alert_message">Please enter a number between 2 and 15,000,000.</string>
    <string name="ok">OK</string>

    <!--String resources for the empty alert dialog-->
    <string name="empty_alert_title">No Limit?</string>
    <string name="empty_alert_message">Please enter a number as your upper limit.</string>

    <!--String resources for the action bar-->
    <string name="action_list_view">List View</string>
    <string name="action_grid_view">Grid View</string>
    <string name="overflow">Overflow</string>

</resources>
