<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffffff"
                tools:context=".MainActivity">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/eratostenes_gold"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/intro"
            android:textSize="15sp"/>
        <TextView
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/input_prompt"
            android:textSize="20sp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_upper_limit"
                android:layout_gravity="center_vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/input_hint"/>
            <Button
                android:id="@+id/main_button"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:text="@string/go"/>
        </LinearLayout>

        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/generate_random_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/generate_random"/>





    </LinearLayout>
</LinearLayout>
